Fixed problem with empty white spaces

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -12,7 +12,7 @@ font-family: 'Russo One', sans-serif; */
 }
 
 nav {
-  width: 100vw;
+  width: 100%;
   background: var(--azul-oscuro);
   display: flex;
   justify-content: space-between;
@@ -56,7 +56,6 @@ a img {
 }
 .ingresar h1 {
   margin: 0;
-
   color: var(--blanco);
   font-family: "Roboto", sans-serif;
   text-align: center;
@@ -94,13 +93,6 @@ a img {
   color: var(--amarillo-fuerte);
 }
 
-footer {
-  width: 100vw;
-  background: var(--azul-oscuro);
-  display: flex;
-  justify-content: center;
-}
-
 .pregunta {
   display: flex;
   flex-direction: column;
@@ -123,24 +115,30 @@ label {
   color: var(--azul-oscuro);
 }
 
-button{
-    margin: 30px 0 30px 50vw;
-   transform:translate(-50%,0);
-   width:80vw;
-   height:2.5em;
-   font-family: "Roboto", sans-serif;
-   font-size:1.1em;
-   border-radius:5px;
-   background: var(--amarillo-medio);
-   box-shadow: 0 2px 3px;
+button {
+  width: 80vw;
+  height: 2.5em;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.1em;
+  border-radius: 5px;
+  background: var(--amarillo-medio);
+  box-shadow: 0 2px 3px;
+}
+
+.button-div{
+    text-align: center;
+    margin: 30px 0;
+}
+
+footer {
+  width: 100vw;
+  background: var(--azul-oscuro);
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 300px) {
   .logo h2 {
     font-size: 1em;
   }
-}
-
-@media (max-width: 300px) {
-
 }
